--- a/package.json
+++ b/package.json
@@ -4,49 +4,27 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "cross-env NODE_ENV=development webpack serve  --progress --hot --config build/webpack.dev.ts",
-        "build": "cross-env NODE_ENV=production webpack --mode=production --config build/webpack.prod.ts"
+        "dev": "vite  --mode dev",
+        "build": "vite build --mode prod"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dayjs": "^1.11.7",
         "vue": "^3.3.3",
         "vue-router": "^4.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.21.8",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-transform-runtime": "^7.21.4",
-        "@babel/preset-env": "^7.21.5",
-        "@babel/preset-typescript": "^7.21.5",
-        "@babel/runtime": "^7.21.5",
-        "@babel/runtime-corejs3": "^7.21.5",
-        "@types/node": "^20.2.0",
-        "@types/webpack": "^5.28.1",
-        "@vue/compiler-sfc": "^3.3.3",
-        "babel-loader": "^9.1.2",
-        "clean-webpack-plugin": "^4.0.0",
-        "core-js": "^3.30.2",
-        "cross-env": "^7.0.3",
-        "css-loader": "^6.7.3",
-        "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^8.0.0",
-        "html-loader": "^4.2.0",
-        "html-webpack-plugin": "^5.5.1",
-        "mini-css-extract-plugin": "^2.7.5",
+        "@types/node": "^20.2.1",
+        "@vitejs/plugin-legacy": "^4.0.3",
+        "@vitejs/plugin-vue": "^4.2.3",
+        "rollup-plugin-visualizer": "^5.9.0",
         "sass": "^1.62.1",
-        "sass-loader": "^13.2.2",
-        "style-loader": "^3.3.2",
-        "ts-loader": "^9.4.2",
-        "ts-node": "^10.9.1",
+        "terser": "^5.17.4",
         "typescript": "^5.0.4",
-        "url-loader": "^4.1.1",
-        "vue-loader": "^17.1.1",
-        "vue-style-loader": "^4.1.3",
-        "webpack": "^5.83.1",
-        "webpack-cli": "^5.1.1",
-        "webpack-dev-server": "^4.15.0",
-        "webpack-merge": "^5.8.0"
+        "vite": "^4.3.8",
+        "vite-plugin-html": "^3.2.0",
+        "vite-plugin-version-mark": "^0.0.4"
     }
 }
